fixes leaderboard spacing

--- a/frontend/src/sass/Home.scss
+++ b/frontend/src/sass/Home.scss
@@ -7,7 +7,7 @@ main.home {
     flex-direction: column;
     align-items: center;
     justify-self: center;
-    justify-content: space-around;
+    justify-content: space-between;
     height: 86vh;
     width: 40vw;
     margin: 5vh 3vw;
@@ -83,6 +83,7 @@ main.home {
       div.form-wrapper{
         display: grid;
         grid-template-columns: 1fr auto 1fr;
+        padding-bottom: 2vh;
         width: 100%;
 
         img {
